k8s/apps/librechat/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  ports:
    - name: http
      port: 3080
      targetPort: http
      protocol: TCP
